--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mysql2",
+  "name": "@debby/mysql2",
   "version": "2.2.5",
   "description": "fast mysql driver. Implements core protocol, prepared statements, ssl and compression in native JS",
   "main": "index.js",
@@ -63,9 +63,9 @@
     "sqlstring": "^2.3.2"
   },
   "devDependencies": {
-    "assert-diff": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^2.3.2",
     "@typescript-eslint/parser": "^2.3.2",
+    "assert-diff": "^3.0.0",
     "error-stack-parser": "^2.0.3",
     "eslint": "^6.2.2",
     "eslint-config-prettier": "^6.1.0",
